# test_task_rust

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs
