[package]
name = "file_downloader_rayon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true
[dependencies]
reqwest = {version="0.11.24", features = ["blocking"]}
sha256 = "1.5.0"
rayon = "1.9.0"
dotenv = "0.15.0"
